[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
nix="0.25"
libseccomp="0.3"
thiserror = "1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
clap={version = "4.0.22",features = ["cargo"]}
tonic="0.8.2"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"

[build-dependencies]
tonic-build="0.8.2"

[dependencies.uuid]
version = "1.2.2"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
